已实现:文件上传和查看 未实现:用户角色校验与删除文件以及全局异常捕获

--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns: th="http://www.thymeleaf.org" >
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
     <title>上传文件</title>
 </head>
 <body>
 <form method="post" enctype="multipart/form-data" action="/upload">
-    <input type="file" name="file">
+    <input type="file" name="file"><br/><br/>
     <input type="submit" value="上传">
 </form>
 </body>
